--- a/ColorNumber/Storyboard/Base.lproj/Main.storyboard
+++ b/ColorNumber/Storyboard/Base.lproj/Main.storyboard
@@ -30,10 +30,10 @@
             </objects>
             <point key="canvasLocation" x="-1284" y="238"/>
         </scene>
-        <!--UIViewController-wyU-vL-a4B-->
+        <!--nav-wyU-vL-a4B-->
         <scene sceneID="v8F-FC-4XS">
             <objects>
-                <viewControllerPlaceholder storyboardName="Library" referencedIdentifier="UIViewController-wyU-vL-a4B" id="E2I-1L-dyI" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Library" referencedIdentifier="nav-wyU-vL-a4B" id="E2I-1L-dyI" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="mDO-oq-LSj"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cuc-R8-aK2" userLabel="First Responder" sceneMemberID="firstResponder"/>
